changed normalized mi to normalized mi of intensity profile... nmiip?

--- a/code/ssim_sandbox.ipynb
+++ b/code/ssim_sandbox.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "        The normalized mutual information between the two arrays, computed at a\n",
     "        granularity of 100 bins per axis (10,000 bins total).\n",
     "    \"\"\"\n",
-    "    hist, bins_A, bins_B = np.histogram2d(np.ravel(A), np.ravel(B), bins=1000)\n",
+    "    hist, bins_A, bins_B = np.histogram2d(np.sort(np.ravel(A)), np.sort(np.ravel(B)), bins=1000)\n",
     "    hist /= np.sum(hist)\n",
     "\n",
     "    H_A = entropy(np.sum(hist, axis=0))\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "(inf, inf, inf, inf)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -211,25 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "entropy() got an unexpected keyword argument 'k'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-76-ec83f8bada11>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmutual_information\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdat1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdat2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#        mutual_information(jhist1),\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#        mutual_information(jhist13),\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#        mutual_information(jhist14)]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-75-77caffb3b77e>\u001b[0m in \u001b[0;36mmutual_information\u001b[0;34m(variables, k)\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \"Mutual information must involve at least 2 variables\")\n\u001b[1;32m     15\u001b[0m     \u001b[0mall_vars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvariables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     return (sum([entropy(X, k=k) for X in variables])\n\u001b[0m\u001b[1;32m     17\u001b[0m             - entropy(all_vars, k=k))\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-75-77caffb3b77e>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \"Mutual information must involve at least 2 variables\")\n\u001b[1;32m     15\u001b[0m     \u001b[0mall_vars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvariables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     return (sum([entropy(X, k=k) for X in variables])\n\u001b[0m\u001b[1;32m     17\u001b[0m             - entropy(all_vars, k=k))\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: entropy() got an unexpected keyword argument 'k'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MI: [4.039590033407743, 0.834027099587868, 0.8269223503318048, 0.8111885158793357]\n",
+      "NMI: [1.9999999999999998, 1.8527282074518365, 1.9999999999999998, 1.9999999999999998]\n",
+      "NVI: [2.001092991188066, 1.9216160229486612, 2.001092991188066, 2.001092991188066]\n"
      ]
     }
    ],
    "source": [
-    "mis = [mutual_information((np.ravel(dat1), np.ravel(dat2)), k=4),]\n",
+    "# mis = [mutual_information((np.ravel(dat1), np.ravel(dat2)), k=4),]\n",
     "#        mutual_information(jhist1),\n",
     "#        mutual_information(jhist13),\n",
     "#        mutual_information(jhist14)]\n",
